anki-sync-server/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: anki-sync-server
spec:
  selector:
    app: anki-sync-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
